mbtiles/tests/snapshots/mbtiles__databases@hash__v1-no-hash.snap
---
source: mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "md-edit", "value - v1"  )',
    '(  "md-remove", "value - remove"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE TABLE tiles_with_hash (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             tile_hash text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  5, 0, 0, blob(same), "51037A4A37730F52C8732586D3AAA316"  )',
    '(  5, 0, 1, blob(), "D41D8CD98F00B204E9800998ECF8427E"  )',
    '(  5, 1, 1, blob(edit-v1), "EFE0AE5FD114DE99855BC2838BE97E1D"  )',
    '(  5, 1, 2, blob(), "D41D8CD98F00B204E9800998ECF8427E"  )',
    '(  5, 1, 3, blob(non-empty), "720C02778717818CC0A869955BA2AFB6"  )',
    '(  5, 2, 2, blob(remove), "0F6969D7052DA9261E31DDB6E88C136E"  )',
    '(  5, 2, 3, blob(), "D41D8CD98F00B204E9800998ECF8427E"  )',
    '(  6, 0, 3, blob(same), "51037A4A37730F52C8732586D3AAA316"  )',
    '(  6, 0, 5, blob(1-keep-1-rm), "535A5575B48444EDEB926815AB26EC9B"  )',
    '(  6, 1, 4, blob(edit-v1), "EFE0AE5FD114DE99855BC2838BE97E1D"  )',
    '(  6, 2, 6, blob(1-keep-1-rm), "535A5575B48444EDEB926815AB26EC9B"  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles_with_hash'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT zoom_level, tile_column, tile_row, tile_data FROM tiles_with_hash'''
